# guru

./: .gitignore  README.md  db.sqlite3  pyproject.toml
docs/: .plans  README.md
guru/: asgi.py  settings.py  urls.py  wsgi.py
guru/apps/authentification/: apps.py  models.py  urls.py
guru/apps/breakup/: apps.py  urls.py  views.py
guru/apps/breakup/migrations/: 0001_initial.py
